--- a/src/app/Project/add-project/add-project.component.html
+++ b/src/app/Project/add-project/add-project.component.html
@@ -1,68 +1,73 @@
-<div class="container-fluid">
-   <div class="form-row">
+<div class="container-fluid mt-5">
+  <div class="form-row">
     <div class="col-lg-4 col-md-4 col-sm-12">
-    <form #addprojectForm="ngForm" novalidate class="form-horizontal"  role="form">
-    <div class="card">
-      <div class="card-header bg-success text-white">Add Project</div>
-      <div class="card-body">
-         <div class="form-group">
-          <label for="task" class="col-sm-5 control-label">Name</label>
-          <div class="col-sm-9">
-            <input type="text" required [(ngModel)]="project.Name" name="task" #namecontrol="ngModel" class="form-control"
-            [class.is-invalid]="namecontrol.invalid && namecontrol.touched" [class.is-valid]="namecontrol.valid" >
-            <span class="invalid-tooltip" *ngIf="namecontrol.invalid && namecontrol.touched">Task is required</span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="Priority" class="col-sm-5 control-label">Priority</label>
-          <div class="col-sm-9">
-            <input type="range" required [(ngModel)]="project.Priority" name="priority" #prioritycontrol="ngModel" min="1" max="30" step="1" class="custom-range"
-            [class.is-invalid]="prioritycontrol.invalid && prioritycontrol.touched" [class.is-valid]="prioritycontrol.valid">
-            <span class="invalid-feedback" *ngIf="prioritycontrol.invalid && prioritycontrol.touched">Priority is required</span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label  class="col-sm-5 control-label">Manager </label>
-          <div class="col-sm-9">
-            <select [(ngModel)]="project.Manager_Id" name="managerid" class="form-control">
-              <ng-container *ngFor="let Manager of Managers">
-                <option [value]="Manager.UserId">{{Manager.UserName}}</option>
-              </ng-container>
-            </select>
+      <form #addprojectForm="ngForm" novalidate class="form-horizontal" role="form">
+        <div class="card">
+          <div class="card-header bg-success text-white">Add Project</div>
+          <div class="card-body">
+            <div class="form-group">
+              <label for="task" class="col-sm-5 control-label">Name</label>
+              <div class="col-sm-9">
+                <input type="text" required [(ngModel)]="project.Name" name="task" #namecontrol="ngModel" class="form-control"
+                  [class.is-invalid]="namecontrol.invalid && namecontrol.touched" [class.is-valid]="namecontrol.valid">
+                <span class="invalid-tooltip" *ngIf="namecontrol.invalid && namecontrol.touched">Task is required</span>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="Priority" class="col-sm-5 control-label">Priority</label>
+              <div class="col-sm-9">
+                <input type="range" required [(ngModel)]="project.Priority" name="priority" #prioritycontrol="ngModel"
+                  min="1" max="30" step="1" class="custom-range" [class.is-invalid]="prioritycontrol.invalid && prioritycontrol.touched"
+                  [class.is-valid]="prioritycontrol.valid">
+                <span class="invalid-feedback" *ngIf="prioritycontrol.invalid && prioritycontrol.touched">Priority is
+                  required</span>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-5 control-label">Manager </label>
+              <div class="col-sm-9">
+                <select [(ngModel)]="project.Manager_Id" name="managerid" class="form-control">
+                  <ng-container *ngFor="let Manager of Managers">
+                    <option [value]="Manager.UserId">{{Manager.UserName}}</option>
+                  </ng-container>
+                </select>
+
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="startdate" class="col-sm-5 control-label">Start Date</label>
+              <div class="col-sm-9">
+                  <input type="text" required readonly [(ngModel)]="project.Start_Date" [(bsValue)]="project.Start_Date" value="{{project.Start_Date | date:'dd/MM/yyyy'}}"
+                  #startdatecontrol="ngModel" name="startdate" bsDatepicker [class.is-invalid]="startdatecontrol.invalid && startdatecontrol.touched"
+                  [class.is-valid]="startdatecontrol.valid" placement="right" class="form-control">
+                   <span class="invalid-tooltip" *ngIf="startdatecontrol.invalid && startdatecontrol.touched">Start Date is required</span>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="enddate" class="col-sm-5 control-label">End Date</label>
+              <div class="col-sm-9">
+                  <input type="text" required readonly [(ngModel)]="project.End_Date" [(bsValue)]="project.End_Date" value="{{project.End_Date | date:'dd/MM/yyyy'}}"
+                  #enddatecontrol="ngModel" name="enddate" bsDatepicker [class.is-invalid]="enddatecontrol.invalid && enddatecontrol.touched"
+                  [class.is-valid]="enddatecontrol.valid" placement="right" class="form-control">
+                <span class="invalid-tooltip" *ngIf="enddatecontrol.invalid && enddatecontrol.touched">End Date is required</span>
+              </div>
+            </div>
 
           </div>
-        </div>
-        <div class="form-group">
-          <label for="startdate" class="col-sm-5 control-label">Start Date</label>
-          <div class="col-sm-9">
-            <input type="text" required readonly [(ngModel)]="project.Start_Date" #startdatecontrol="ngModel" name="startdate"  bsDatepicker [bsConfig]="{dateInputFormat:'DD/MM/YYYY'}"
-            [class.is-invalid]="startdatecontrol.invalid && startdatecontrol.touched" [class.is-valid]="startdatecontrol.valid"  placement="right" class="form-control">
-            <span class="invalid-tooltip" *ngIf="startdatecontrol.invalid && startdatecontrol.touched">Start Date is required</span>
+          <div class="card-footer">
+            <!-- /.form-group -->
+            <div class="form-group">
+              <div class="col-sm-9 col-sm-offset-3">
+                <button type="submit" (click)="AddProject(addprojectForm)" [disabled]="addprojectForm.invalid" class="btn btn-info">
+                  {{UpdateFlag == false ? 'Add':'Update' }}</button>
+                <button type="reset" id="reset" class="btn btn-info ml-1">Reset</button>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="form-group">
-          <label for="enddate" class="col-sm-5 control-label">End Date</label>
-          <div class="col-sm-9">
-            <input type="text" required readonly [(ngModel)]="project.End_Date" #enddatecontrol="ngModel" name="enddate"  bsDatepicker [bsConfig]="{dateInputFormat:'DD/MM/YYYY'}"
-            [class.is-invalid]="enddatecontrol.invalid && enddatecontrol.touched" [class.is-valid]="enddatecontrol.valid"  placement="right" class="form-control">
-            <span class="invalid-tooltip" *ngIf="enddatecontrol.invalid && enddatecontrol.touched">End Date is required</span>
-          </div>
-        </div>
-        
-      </div>
-      <div class="card-footer">
-        <!-- /.form-group -->
-        <div class="form-group">
-          <div class="col-sm-9 col-sm-offset-3">
-            <button type="submit" (click)="AddProject(addprojectForm)" [disabled]="addprojectForm.invalid" class="btn btn-info">Add Project</button>
-            <button type="reset" id="reset" class="btn btn-info ml-1">Reset</button>
-          </div>
-        </div>
-      </div>
+      </form>
+      <!-- /form -->
     </div>
-  </form>
-  <!-- /form -->
-  </div>
     <div class="col-lg-7 col-md-7 col-sm-12">
       <table class="table table-bordered table-stripped">
         <thead class="bg-success text-white">
@@ -75,31 +80,28 @@
             <th scope="col">Action</th>
           </tr>
         </thead>
-        <tbody *ngFor="let project of projectDetails" >
-                        <tr>
-                            <td>{{project.Name}}</td>
-                            <td>{{project.Priority}}</td>
-                            <td>{{project.StartDate}}</td>
-                            <td>{{project.EndDate}}</td>
-                            <td>{{project.Manager}}</td>
-                            <td>
-                                <div class=" btn-toolbar " role="toolbar ">
-                                    <div class="btn-group mr-2 " role="group ">
-                                       <input type="button " (click)="Edit(project.ProjectId)
-          " class="btn btn-info " value="Edit">
-                                    </div>
-                                    <div class="btn-group " role="group ">
-                                        <input type="button " (click)="Delete(project.ProjectId)
-          " class="btn btn-info " value="Delete ">
-                                        <router-outlet></router-outlet>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
+        <tbody *ngFor="let project of projectDetails">
+          <tr>
+            <td>{{project.Name}}</td>
+            <td>{{project.Priority}}</td>
+            <td>{{project.StartDate}}</td>
+            <td>{{project.EndDate}}</td>
+            <td>{{project.Manager}}</td>
+            <td>
+              <div class=" btn-toolbar" role="toolbar">
+                <div class="btn-group" role="group">
+                  <input type="button" (click)="Edit(project.ProjectId)" class="btn btn-info" value="Edit">
+                </div>
+                <div class="btn-group ml-2" role="group">
+                  <input type="button" (click)="Delete(project.ProjectId)" class="btn btn-info" value="Delete">
+                </div>
+              </div>
+            </td>
+          </tr>
 
-                    </tbody>
-</table>
-  </div>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 <!-- ./container -->
