--- a/src/app/Project/add-project/add-project.component.html
+++ b/src/app/Project/add-project/add-project.component.html
@@ -1,4 +1,6 @@
-<div class="container-fluid mt-5">
+<ngb-alert *ngIf="successMessage" type="success" (close)="successMessage = null">{{successMessage}}</ngb-alert> 
+<ngb-alert *ngIf="errorMessage" type="danger" (close)="errorMessage = null">{{errorMessage}}</ngb-alert> 
+<div class="container-fluid mt-3">
   <div class="form-row">
     <div class="col-lg-4 col-md-4 col-sm-12">
       <form #addprojectForm="ngForm" novalidate class="form-horizontal" role="form">
@@ -37,19 +39,23 @@
             <div class="form-group">
               <label for="startdate" class="col-sm-5 control-label">Start Date</label>
               <div class="col-sm-9">
-                  <input type="text" required readonly [(ngModel)]="project.Start_Date" [(bsValue)]="project.Start_Date" value="{{project.Start_Date | date:'dd/MM/yyyy'}}"
-                  #startdatecontrol="ngModel" name="startdate" bsDatepicker [class.is-invalid]="startdatecontrol.invalid && startdatecontrol.touched"
+                <input type="text" required readonly [(ngModel)]="project.Start_Date" [(bsValue)]="project.Start_Date"
+                  value="{{project.Start_Date | date:'dd/MM/yyyy'}}" #startdatecontrol="ngModel" name="startdate"
+                  bsDatepicker [class.is-invalid]="startdatecontrol.invalid && startdatecontrol.touched"
                   [class.is-valid]="startdatecontrol.valid" placement="right" class="form-control">
-                   <span class="invalid-tooltip" *ngIf="startdatecontrol.invalid && startdatecontrol.touched">Start Date is required</span>
+                <span class="invalid-tooltip" *ngIf="startdatecontrol.invalid && startdatecontrol.touched">Start Date
+                  is required</span>
               </div>
             </div>
             <div class="form-group">
               <label for="enddate" class="col-sm-5 control-label">End Date</label>
               <div class="col-sm-9">
-                  <input type="text" required readonly [(ngModel)]="project.End_Date" [(bsValue)]="project.End_Date" value="{{project.End_Date | date:'dd/MM/yyyy'}}"
-                  #enddatecontrol="ngModel" name="enddate" bsDatepicker [class.is-invalid]="enddatecontrol.invalid && enddatecontrol.touched"
-                  [class.is-valid]="enddatecontrol.valid" placement="right" class="form-control">
-                <span class="invalid-tooltip" *ngIf="enddatecontrol.invalid && enddatecontrol.touched">End Date is required</span>
+                <input type="text" required readonly [(ngModel)]="project.End_Date" [(bsValue)]="project.End_Date"
+                  value="{{project.End_Date | date:'dd/MM/yyyy'}}" #enddatecontrol="ngModel" name="enddate"
+                  bsDatepicker [class.is-invalid]="enddatecontrol.invalid && enddatecontrol.touched" [class.is-valid]="enddatecontrol.valid"
+                  placement="right" class="form-control">
+                <span class="invalid-tooltip" *ngIf="enddatecontrol.invalid && enddatecontrol.touched">End Date is
+                  required</span>
               </div>
             </div>
 
@@ -93,7 +99,7 @@
                   <input type="button" (click)="Edit(project.ProjectId)" class="btn btn-info" value="Edit">
                 </div>
                 <div class="btn-group ml-2" role="group">
-                  <input type="button" (click)="Delete(project.ProjectId)" class="btn btn-info" value="Delete">
+                  <input type="button" (click)="OpenModalPopup(content, project.ProjectId)" class="btn btn-info" value="Delete">
                 </div>
               </div>
             </td>
@@ -105,3 +111,18 @@
   </div>
 </div>
 <!-- ./container -->
+<ng-template #content let-model>
+  <div class="modal-header">
+    <h4 class="modal-title">Delete</h4>
+    <button type="button" class="close" aria-lable="Close" (click)="modal.dismiss('Cross Click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure do you want to delete this project?</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-info" (click)="Delete()">Delete</button>
+    <button type="button" class="btn btn-info" (click)="modal.close('Close Click')">Cancel</button>
+  </div>
+</ng-template>
